header css refactored to resolve clipping issues

--- a/app/assets/stylesheets/1_header.css.scss
+++ b/app/assets/stylesheets/1_header.css.scss
@@ -4,54 +4,53 @@
 @mixin background-color_section {
   background-color: #FFFFFF;
 }
-@mixin box_static {
-  max-height: 1em;
-  overflow: hidden;
-  text-overflow: clip;
-}
 header {
   @include background-color_header;
   font-size: 12px;
   hgroup {
+    overflow: hidden;
     padding: 12px;
     h1, h2, h3 {
-      @include box_static;
-      margin: 4px;
+      white-space: nowrap;
     }
     h1 {
+      margin: 4px 4px;
       color: #FFFFFF;
       text-shadow: 3px 4px 3px rgba(0,0,0,0.7);
     }
     h2 {
+      margin: 0px 4px;
       color: #FFFF7F;
       text-shadow: 2px 3px 2px rgba(0,0,0,0.7);
     }
     h3 {
+      margin: 0px 4px;
       color: #FFAF5F;
       text-shadow: 1px 2px 1px rgba(0,0,0,0.7);
     }
   }
   nav {
-    @include box_static;
     background-color: #555555;
-    padding: 8px;
+    overflow: hidden;
+    padding: 0px 12px;
+    white-space: nowrap;
     a, a:visited {
       color: #FF7F7F;
-      margin: 4px;
-      padding: 8px;
+      display: inline-block;
+      padding: 4px 12px;
       text-decoration: none;
     }
-    a.selected {
+    a:hover {
+      background-color: #FF7F7F;
+      color: #FFFFFF;
+    }
+    a.selected, a.selected:hover{
       @include background-color_section;
       color: #FF0000;
     }
     a.link-disabled, a.link-disabled:hover {
       background-color: #555555;
       color: #000000;
-    }
-    a:hover {
-      background-color: #FF7F7F;
-      color: #FFFFFF;
     }
   }
 }
